# fix-my-halo

./: .gitignore  .prettierignore  .vercelignore  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release-cli.yml
core/: Cargo.toml
core/src/: engine.rs  lib.rs  main.rs
public/: manifest.webmanifest
scripts/: build-cli.ts  dev.ts  utils.ts  vercel-build.sh
src/: App.css  App.tsx  main.tsx  types.ts
src/components/layout/: Footer.tsx  Header.tsx
src/components/ui/: Button.tsx  CodeSnippet.tsx  HoverCard.tsx  Label.tsx  ScrollArea.tsx  Separator.tsx  Slider.tsx  Switch.tsx
src/features/docs/: CliDocumentation.tsx  ProcessExplanation.tsx
src/features/docs/components/: CliCommandBuilder.tsx
src/features/processor/: BatchProcessor.tsx  constants.ts  utils.ts
src/features/processor/components/: FileRow.tsx
src/features/processor/hooks/: useBatchProcessor.ts  useFilePreview.ts
src/features/processor/workers/: processorWorker.ts  types.ts
src/features/theme/: ThemeToggle.tsx
src/lib/: constants.ts
src/stores/: useSettingsStore.ts  useThemeStore.ts  useWorkerStore.ts
