[package]
name = "fix-my-halo"
version = "0.1.0"
authors = ["Azganoth"]
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fix-my-halo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
clap = { version = "4.5", features = ["derive"], optional = true }