[package]
name = "fix-my-halo"
version = "0.1.0"
authors = ["Azganoth"]
edition = "2024"

[lib]
name = "fix_my_halo_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fix-my-halo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
] }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
clap = { version = "4.5", features = ["derive"], optional = true }
indicatif = { version = "0.18.3", features = ["rayon"] }
glob = "0.3.3"
rayon = "1.11.0"
walkdir = "2.5.0"
