[package]
name = "fix-my-halo"
version = "0.2.0"
authors = ["Azganoth"]
edition = "2024"

[lib]
name = "fix_my_halo_core"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "fix-my-halo"
path = "src/main.rs"
required-features = ["cli"]

[features]
cli = ["clap"]

[dependencies]
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "tga",
  "bmp",
  "tiff",
  "dds",
] }
wasm-bindgen = "0.2.115"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6"
clap = { version = "4.6", features = ["derive"], optional = true }
indicatif = { version = "0.18.4", features = ["rayon"] }
console = "0.16.3"
glob = "0.3.3"
rayon = "1.11.0"
walkdir = "2.5.0"
